# ecu-telemetry-simulator

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  REPORT.md  generate_pdf.py  run_qemu.sh  toolchain.cmake
firmware/: CMakeLists.txt
firmware/cmake/: toolchain-arm-none-eabi.cmake
firmware/include/: FreeRTOSConfig.h  firmware.h  semihost.h  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h
firmware/ld/: stm32f100rb.ld
firmware/src/: console.c  hooks.c  libc_shim.c  main.c  semihost.c  startup_stm32f100rb.s  system_stm32f100rb.c
include/: math.h  stdio.h  stdlib.h  string.h
report_assets/csv/: firmware_telemetry.csv  firmware_watchdog.csv  host_stats_snapshot.csv  host_telemetry.csv  parse_logs.py
report_assets/diagrams/: generate_diagrams.py
report_assets/flowcharts/: generate_flowcharts.py
report_assets/graphs/: generate_graphs.py
report_assets/logs/: firmware_telemetry.txt  host_commands.txt  host_missing_commands.txt  host_telemetry.txt
src/: compat.h  ecu_sim.c  ecu_sim.h  host_main.c  main.c  printf.c  printf.h  queue.c  syscalls.c  uart.c  uart.h
src/fault/: fault_injection.c  fault_injection.h
src/ipc/: ipc.c  ipc.h
src/tasks/: diagnostics_task.c  diagnostics_task.h  health_monitor_task.c  health_monitor_task.h  processing_task.c  processing_task.h  sensor_task.c  sensor_task.h  telemetry_task.c  telemetry_task.h
startup/: lm3s6965.ld  startup_lm3s.c
